--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only typescript/ternary-optional.ts"
+  },
   "devDependencies": {
     "typescript": "^5.6.3"
   }
